# audio-suite

./: README.md  audio-processing.py  pyproject.toml  test_audio.ipynb
audio_suite/: audio-classification.py
services/ctc-forced-aligner/: Dockerfile  run.py
