[tool.poetry]
name = "audio-suite"
version = "0.1.0"
description = ""
authors = ["Freya Aino <freya.aino@pm.me>"]
readme = "README.md"
packages = [{include = "audio_suite"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.5.1+cu124"
torchaudio = "2.5.1+cu124"
numpy = "^2.2"
accelerate = "^1.3.0"
soundfile = "^0.13.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
datasets = "^3.2.0"
pytest = "^7.2.0"
notebook = "^7.3.2"
silero-vad = "^5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
